<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/locations_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/character_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/character_image"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        app:layout_constraintStart_toEndOf="@id/character_image"
        app:layout_constraintTop_toTopOf="@id/character_image" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_type"
        app:layout_constraintStart_toEndOf="@id/character_image"
        app:layout_constraintTop_toBottomOf="@id/location_name" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimension"
        app:layout_constraintStart_toEndOf="@id/character_image"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/number_of_residents_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_residents"
        app:layout_constraintStart_toEndOf="@id/character_image"
        app:layout_constraintTop_toBottomOf="@id/dimension" />

    <TextView
        android:id="@+id/number_of_residents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/number_of_residents"
        app:layout_constraintStart_toEndOf="@id/number_of_residents_label"
        app:layout_constraintTop_toTopOf="@id/number_of_residents_label"
        app:layout_constraintBottom_toBottomOf="@id/number_of_residents_label"/>

</androidx.constraintlayout.widget.ConstraintLayout>