<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/character_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/character_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_name" />

    <TextView
        android:id="@+id/character_specie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_specie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/character_status" />

</androidx.constraintlayout.widget.ConstraintLayout>